assets/stylesheets/main.css
/*
  ========================================
  CSS Reset
  http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
  License: none (public domain)
  ========================================
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
    display: block;
}

body {
    line-height: 1;
}

ol,
ul {
    list-style: none;
}

blockquote,
q {
    quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
    content: '';
    content: none;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

/*
  ========================================
  HTML5
  ========================================
*/

article {
    box-sizing: border-box;
    background-color: #DCDCDC;
    border: 2px solid #e7e7e7;
    border-radius: 10px;
    box-shadow: 0px 4px 2px #130088;
    opacity: 0.8;
    padding: 15px;
    width: 890px;
}

aside {
    background-color: #e7e7e7;
    border: 2px dotted #DCDCDC;
    margin: 5px;
    padding: 5px;
}

footer {
    min-height: 120px;
    padding: 30px;
}

footer p {
    padding-top: 10px;
}

header {
    min-height: 120px;
    padding: 10px;
}

iframe {
    margin: auto;
    display: block;
}

section {
    background-color: #e7e7e7;
    border-right: 4px solid #DCDCDC;
    border-left: 4px solid #DCDCDC;
    padding: 20px;
}

/*
  ========================================
  Containers & Grid
  ========================================
*/

.container {
    padding-left: 30px;
    padding-right: 30px;
}

.container,
.grid {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    margin: 0 auto;
    width: 960px;
}

.col-20 {
    width: 20%;
}

.col-60 {
    width: 60%;
}

.col-20,
.col-60 {
    display: inline-block;
    vertical-align: top;
}

.grid,
.col-20,
.col-60 {
    padding-left: 36px;
    padding-right: 36px;
}

/*
  ========================================
  Typography
  ========================================
*/

body {
    background-color: #F8F8FF;
    color: #666666;
    font-family: "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 16px;
    line-height: 24px;
}

a[href*="tutsplus"] {
    /* Use their signature Envato green */
    color: #83b348;
}

h1,
h2,
h4,
h5,
p {
    margin-bottom: 10px;
}

h1,
h2,
h3,
h4,
h5 {
    color: #6A5ACD;
}

h1 {
    font-size: 2.25em;
    line-height: 140%;
}

h2 {
    font-size: 1.5em;
    line-height: 140%;
}

h3 {
    font-size: 1.3em;
}

h4 {
    font-size: 1.125em;
}

h5 {
    color: #a9b2b9;
    font-size: 1em;
    font-weight: 400;
    text-transform: uppercase;
}

strong {
    font-weight: 400;
}

cite,
em {
    font-style: italic;
}

.tooltip {
    color: #F8F8FF;
    background-color: #6A5ACD;
}

/*
  ========================================
  Buttons
  ========================================
*/

.btn {
    background-color: #008CBA;
    border-radius: 2px;
    color: #F8F8FF;
    display: inline-block;
}

.btn-alt {
    border: 1px solid #F8F8FF;
    padding: 8px;
    transition-duration: 0.4s;
}

.btn-alt:hover {
    background-color: #7CB9E8;
}

.btn.current-page {
    background-color: #7CB9E8;
}

/*
  ========================================
  Links
  ========================================
*/

a:hover {
    color: #6A5ACD;
}

a#site-logo:hover {
    color: #7CB9E8;
    transition-duration: 0.4s;
}

a {
    color: #130088;
    text-decoration: none;
}

p a {
    border-bottom: 1px dotted #130088;
}

p a:hover {
    border-bottom: 1px dotted #6A5ACD;
    transition-duration: 0.4s;
}

/*
  ========================================
  Lists
  ========================================
*/

ul {
    list-style-position: inside;
    list-style-type: square;
    margin: 5px;
}

/*
  ========================================
  Primary header
  ========================================
*/

.logo {
    color: #F8F8FF;
    font-weight: 100;
}

.primary-header {
    background-color: #42444e;
    padding: 10px 30px 0px;
    width: 100%;
}

.searchbar {
    border: 1px solid #F8F8FF;
    border-radius: 2px;
    background-color: #666666;
    color: #F8F8FF;
    padding: 8px;
    width: 28%;
}

.main-nav,
.searchbar {
    margin: 0 4% auto;
    top: -20px;
}

.logo,
.main-nav,
.searchbar {
    box-sizing: border-box;
    display: inline-block;
    position: relative;
}

#site-logo {
    color: #F8F8FF;
}

/*
  ========================================
  Primary Footer
  ========================================
*/

.primary-footer {
    background-color: #42444e;
    width: 100%;
}

.primary-footer small {
    color: #F8F8FF;
    font-weight: 400;
}

/*
  ========================================
  Miscellaneous Style
  ========================================
*/

.artwork {
    border: 2px solid #DCDCDC;
    box-shadow: 0px 2px 2px #130088;
    display: inline-block;
    width: 46%;
    height: 550px;
    margin: 0 auto;
    padding: 5px;
}

.contact {
    box-sizing: border-box;
    display: inline-block;
    margin-right: 90%;
    margin-top: 10px;
}

.contact:active, .contact:focus {
    outline: 2px solid #7CB9E8;
}

